[package]
name = "pi_cancel_timer"
version = "0.1.0"
authors = ["suncy <suncy@gmail.com>"]
edition = "2018"

[dependencies]
pi_ext_heap = {path="../pi_ext_heap"}
slotmap = "1.0"
pi_slot_wheel = {path="../pi_slot_wheel"}
pi_slot_deque = {path="../pi_slot_deque"}

[dev-dependencies]
pcg_rand = "0.13"
rand_core = "0.6"